--- a/tailwindCss/src/index.html
+++ b/tailwindCss/src/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="./output.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./input.css" />
+
+  
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
@@ -263,139 +266,139 @@
         </p>
       </div>
   </section>
-<section class="bg-gray-50 py-24">
-  <div class="max-w-7xl mx-auto px-6">
-    <!-- Pricing Cards Flex Container -->
-    <div class="flex flex-col md:flex-row justify-center gap-8">
-      
-      <!-- Starter Card -->
-      <div class="border-2 border-gray-200 rounded-lg p-8 w-full md:w-96 shadow-lg bg-white">
-        <h1 class="text-xl font-semibold mb-3 text-center">Starter</h1>
-        <p class="text-lg text-gray-600 mb-6 text-center">
-          Great for personal use and for your side projects.
-        </p>
-        <h1 class="text-6xl font-extrabold text-center text-gray-900 mb-8">$49</h1>
-        <ul class="flex flex-col gap-4 mb-8 text-gray-800">
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Individual configuration</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>No setup, monthly, or hidden fees</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Team size: 1 developer</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Premium support: 6 months</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Free updates: 6 months</p>
-          </li>
-        </ul>
-        <div class="flex justify-center">
-          <button class="text-sm text-white bg-purple-600 px-24 rounded-md py-2 hover:bg-purple-700 transition">
-            Get Started
-          </button>
-        </div>
-      </div>
+  <section class="bg-gray-50 py-24">
+    <div class="max-w-7xl mx-auto px-6">
+      <!-- Pricing Cards Flex Container -->
+      <div class="flex flex-col md:flex-row justify-center gap-8">
 
-      <!-- Company Card -->
-      <div class="border-2 border-gray-200 rounded-lg p-8 w-full md:w-96 shadow-lg bg-white">
-        <h1 class="text-xl font-semibold mb-3 text-center">Company</h1>
-        <p class="text-lg text-gray-600 mb-6 text-center">
-          Great for small teams and startups.
-        </p>
-        <h1 class="text-6xl font-extrabold text-center text-gray-900 mb-8">$99</h1>
-        <ul class="flex flex-col gap-4 mb-8 text-gray-800">
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Individual configuration</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>No setup, monthly, or hidden fees</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Team size: up to 5 developers</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Premium support: 12 months</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Free updates: 12 months</p>
-          </li>
-        </ul>
-        <div class="flex justify-center">
-          <button class="text-sm text-white bg-purple-600 px-24 rounded-md py-2 hover:bg-purple-700 transition">
-            Get Started
-          </button>
+        <!-- Starter Card -->
+        <div class="border-2 border-gray-200 rounded-lg p-8 w-full md:w-96 shadow-lg bg-white">
+          <h1 class="text-xl font-semibold mb-3 text-center">Starter</h1>
+          <p class="text-lg text-gray-600 mb-6 text-center">
+            Great for personal use and for your side projects.
+          </p>
+          <h1 class="text-6xl font-extrabold text-center text-gray-900 mb-8">$49</h1>
+          <ul class="flex flex-col gap-4 mb-8 text-gray-800">
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Individual configuration</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>No setup, monthly, or hidden fees</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Team size: 1 developer</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Premium support: 6 months</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Free updates: 6 months</p>
+            </li>
+          </ul>
+          <div class="flex justify-center">
+            <button class="px-6 py-2 rounded-md bg-purple-600 text-white hover:bg-purple-700 transition">
+              Get Started
+            </button>
+          </div>
         </div>
-      </div>
 
-      <!-- Enterprise Card -->
-      <div class="border-2 border-gray-200 rounded-lg p-8 w-full md:w-96 shadow-lg bg-white">
-        <h1 class="text-xl font-semibold mb-3 text-center">Enterprise</h1>
-        <p class="text-lg text-gray-600 mb-6 text-center">
-          Perfect for large organizations and enterprises.
-        </p>
-        <h1 class="text-6xl font-extrabold text-center text-gray-900 mb-8">$499</h1>
-        <ul class="flex flex-col gap-4 mb-8 text-gray-800">
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Individual configuration</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>No setup, monthly, or hidden fees</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Unlimited team size</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Premium support: 24 months</p>
-          </li>
-          <li class="flex gap-3 items-start">
-            <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
-            <p>Free updates: 24 months</p>
-          </li>
-        </ul>
-        <div class="flex justify-center">
-          <button class="text-sm text-white bg-purple-600 px-24 rounded-md py-2 hover:bg-purple-700 transition">
-            Get Started
-          </button>
+        <!-- Company Card -->
+        <div class="border-2 border-gray-200 rounded-lg p-8 w-full md:w-96 shadow-lg bg-white">
+          <h1 class="text-xl font-semibold mb-3 text-center">Company</h1>
+          <p class="text-lg text-gray-600 mb-6 text-center">
+            Great for small teams and startups.
+          </p>
+          <h1 class="text-6xl font-extrabold text-center text-gray-900 mb-8">$99</h1>
+          <ul class="flex flex-col gap-4 mb-8 text-gray-800">
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Individual configuration</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>No setup, monthly, or hidden fees</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Team size: up to 5 developers</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Premium support: 12 months</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Free updates: 12 months</p>
+            </li>
+          </ul>
+          <div class="flex justify-center">
+            <button class="px-6 py-2 rounded-md bg-purple-600 text-white hover:bg-purple-700 transition">
+              Get Started
+            </button>
+          </div>
         </div>
-      </div>
 
+        <!-- Enterprise Card -->
+        <div class="border-2 border-gray-200 rounded-lg p-8 w-full md:w-96 shadow-lg bg-white">
+          <h1 class="text-xl font-semibold mb-3 text-center">Enterprise</h1>
+          <p class="text-lg text-gray-600 mb-6 text-center">
+            Perfect for large organizations and enterprises.
+          </p>
+          <h1 class="text-6xl font-extrabold text-center text-gray-900 mb-8">$499</h1>
+          <ul class="flex flex-col gap-4 mb-8 text-gray-800">
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Individual configuration</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>No setup, monthly, or hidden fees</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Unlimited team size</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Premium support: 24 months</p>
+            </li>
+            <li class="flex gap-3 items-start">
+              <img src="./images/image18.png" alt="" class="w-5 h-5 mt-1" />
+              <p>Free updates: 24 months</p>
+            </li>
+          </ul>
+          <div class="flex justify-center">
+            <button class="px-6 py-2 rounded-md bg-purple-600 text-white hover:bg-purple-700 transition">
+              Get Started
+            </button>
+          </div>
+        </div>
+
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
 
 
-<section class="bg-gray-50 py-24">
-  <div class="flex flex-col items-center text-center max-w-3xl mx-auto px-6">
-    <h1 class="text-4xl font-bold text-gray-900">
-      Start your free trial today
-    </h1>
-    <p class="text-lg md:text-xl text-gray-600 mt-6 mb-10">
-      Try Flowbite Platform free for 30 days. No credit card required.
-    </p>
-    <button
-      class="text-base font-medium text-white bg-purple-600 px-8 md:px-12 py-3 rounded-lg shadow-md hover:bg-purple-700 transition">
-      Start Free Trial
-    </button>
-  </div>
-</section>
+  <section class="bg-gray-50 py-24">
+    <div class="flex flex-col items-center text-center max-w-3xl mx-auto px-6">
+      <h1 class="text-4xl font-bold text-gray-900">
+        Start your free trial today
+      </h1>
+      <p class="text-lg md:text-xl text-gray-600 mt-6 mb-10">
+        Try Flowbite Platform free for 30 days. No credit card required.
+      </p>
+      <button
+        class="btn">
+        Start Free Trial
+      </button>
+    </div>
+  </section>
 
 
 
